--- a/style.css
+++ b/style.css
@@ -1,15 +1,34 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+  background: rgb(255, 239, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 239, 0, 1) 50%,
+    rgba(72, 45, 253, 1) 50%
+  );
+  color: rgb(59, 59, 59);
+}
+
 .image {
-  border: rgb(125, 0, 0) 5px solid;
-  border-radius: 30px;
+  object-fit: cover;
+  border: black 5px solid;
+  border-radius: 100%;
   display: block;
   margin: 0 auto;
   margin-bottom: 5px;
-  background: rgb(125, 0, 0);
+  background: rgb(0, 0, 0);
+  width: 270px;
+  height: 300px;
+}
+
+.video {
+  border: black 5px solid;
+  border-radius: 20px;
 }
 .text0 {
   width: 400px;
-  background: #ddd;
-  border: rgb(100, 0, 0) 3px solid;
+  background: white;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   margin-bottom: 5px;
   padding-left: 5px;
@@ -19,39 +38,40 @@
   justify-content: center;
 }
 .text1 {
-  background: #ddd;
-  border: rgb(100, 0, 0) 3px solid;
+  background: white;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   margin-bottom: 5px;
   padding-left: 5px;
 }
 .text2 {
-  background: #ddd;
-  border: rgb(125, 0, 0) 3px solid;
+  background: white;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   margin-bottom: 5px;
   padding-right: 5px;
 }
 .text3 {
-  background: #ddd;
-  border: rgb(125, 0, 0) 3px solid;
+  background: white;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   margin-bottom: 5px;
   padding-left: 5px;
 }
 .text4 {
-  background: #ddd;
-  border: rgb(100, 0, 0) 3px solid;
+  background: white;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   margin-bottom: 5px;
   padding-right: 5px;
 }
 .text5 {
   width: 130px;
-  background: #ddd;
-  border: rgb(100, 0, 0) 3px solid;
+  background: white;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   padding-left: 5px;
+  padding-right: 5px;
   margin: 0 auto;
   display: block;
   margin-bottom: 5px;
@@ -59,8 +79,8 @@
 }
 .text6 {
   width: 760px;
-  background: #ddd;
-  border: rgb(100, 0, 0) 3px solid;
+  background: white;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   display: flex;
   flex-direction: row;
@@ -90,35 +110,30 @@
   color: rgb(0, 0, 0);
   font-size: 18px;
 }
-.text0:hover {
-  background: white;
-  color: rgb(0, 0, 0);
-}
-.text5:hover {
-  background: white;
-  color: rgb(0, 0, 0);
-}
-.text6:hover {
-  background: white;
-  color: rgb(0, 0, 0);
-}
+
 
 .image1 {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
-  border: rgb(125, 0, 0) 5px solid;
+  border: rgb(0, 0, 0) 5px solid;
   border-radius: 30px;
-  background: rgb(125, 0, 0);
+  background: rgb(0, 0, 0);
 }
 
 .image2 {
   margin-bottom: 10px;
-  border: rgb(125, 0, 0) 5px solid;
+  border: rgb(0, 0, 0) 5px solid;
   border-radius: 30px;
-  background: rgb(125, 0, 0);
+  background: rgb(0, 0, 0);
 }
 
+.image1:hover {
+  border: yellow 5px solid;
+}
+.image2:hover {
+  border: rgb(255, 255, 0) 5px solid;
+}
 .image1:hover {
   border: rgb(255, 235, 210) 5px solid;
 }
