--- a/style.css
+++ b/style.css
@@ -129,11 +129,11 @@ body {
 }
 
 .image1:hover {
-  border: rgb(255, 235, 210) 5px solid;
+  border: yellow 5px solid;
 }
 .image2:hover {
-  border: rgb(255, 235, 210) 5px solid;
-}
+  border: rgb(255, 255, 0) 5px solid;
+} 
 
 .developer {
   display: flex;
