--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  background: rgb(88,25,126);
+  background: rgb(88, 25, 126);
   background: radial-gradient(
-  circle, 
-  rgba(88,25,126,1) 0%, 
-  rgba(255,255,255,1) 100%);
+    circle,
+    rgba(88, 25, 126, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
   color: rgb(59, 59, 59);
 }
 
@@ -110,7 +111,6 @@ body {
   font-size: 18px;
 }
 
-
 .image1 {
   margin-left: 10px;
   margin-right: 10px;
@@ -125,6 +125,17 @@ body {
   border: rgb(0, 0, 0) 5px solid;
   border-radius: 30px;
   background: rgb(0, 0, 0);
+}
+
+.image3 {
+  margin-bottom: 10px;
+  border: rgb(0, 0, 0) 5px solid;
+  border-radius: 30px;
+  background: rgb(0, 0, 0);
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  margin-left: 10px;
 }
 
 .developer {
