--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
 }
 
 .text6 {
-  width: 760px;
+  width: 770px;
   background: white;
   border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
@@ -99,18 +99,20 @@ body {
   justify-content: center;
   margin: 0 auto;
   margin-bottom: 20px;
+  margin-top: 10px;
   padding-left: 5px;
   font-size: 18px;
 }
 
 .video {
+  display: block;
   margin: 0 auto;
+  margin-bottom: 10px;
   border: black 5px solid;
   border-radius: 20px;
 }
 
 .image1 {
-  margin: 0 auto;
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
@@ -120,7 +122,6 @@ body {
 }
 
 .image2 {
-  margin: 0 auto;
   margin-bottom: 10px;
   border: rgb(0, 0, 0) 5px solid;
   border-radius: 30px;
@@ -128,7 +129,6 @@ body {
 }
 
 .image3 {
-  margin: 0 auto;
   margin-bottom: 10px;
   border: rgb(0, 0, 0) 5px solid;
   border-radius: 30px;
@@ -148,6 +148,12 @@ body {
 .wikipedia {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.images {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
 }
 
