--- a/style.css
+++ b/style.css
@@ -65,15 +65,104 @@ body {
   background: white;
   border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
+body {
+  font-family: "Montserrat", sans-serif;
+  background: rgb(233, 233, 233);
+  background: radial-gradient(
+    circle,
+    rgba(233, 233, 233, 1) 50%,
+    rgba(48, 48, 48, 1) 100%
+  );
+  color: rgb(59, 59, 59);
+}
+
+.all {
+  height: 100%;
+  width: 80%;
+  padding: 10px;
+  background: rgb(56, 56, 56);
+  background: radial-gradient(
+    circle,
+    rgba(56, 56, 56, 1) 38%,
+    rgba(168, 15, 255, 1) 100%
+  );
+  border: 3px black solid;
+  border-radius: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin: 0 auto;
+}
+
+.heading {
+  margin: 0 auto;
+  width: 500px;
+  background: whitesmoke;
+  border: 3px black solid;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+
+.image {
+  transition: 1s;
+  background: rgb(0, 0, 0);
+  object-fit: cover;
+  border: black 3px solid;
+  border-radius: 100%;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 5px;
+  background: rgb(0, 0, 0);
+  width: 270px;
+  height: 300px;
+}
+
+.text5 {
+  opacity: 1;
+  width: 150px;
+  background: whitesmoke;
+  border: rgb(0, 0, 0) 3px solid;
+  border-radius: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 0 auto;
+  display: block;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.text1 {
+  opacity: 1;
+  background: whitesmoke;
+  border: rgb(0, 0, 0) 3px solid;
+  border-radius: 20px;
+  margin: 0 auto;
+  margin-bottom: 5px;
+  padding-left: 5px;
+  width: 1200px;
+}
+.text2 {
+  opacity: 1;
+  background: whitesmoke;
+  border: rgb(0, 0, 0) 3px solid;
+  border-radius: 20px;
+  margin: 0 auto;
+  margin-bottom: 5px;
+  padding-right: 5px;
+  width: 1300px;
+}
+.text3 {
+  opacity: 1;
+  background: whitesmoke;
+  border: rgb(0, 0, 0) 3px solid;
+  border-radius: 20px;
   margin: 0 auto;
   margin-bottom: 5px;
   padding-left: 5px;
   width: 1400px;
 }
-
 .text4 {
   opacity: 1;
-  background: white;
+  background: whitesmoke;
   border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   margin: 0 auto;
@@ -85,7 +174,7 @@ body {
 .text0 {
   opacity: 1;
   width: 430px;
-  background: white;
+  background: whitesmoke;
   border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   margin: 0 auto;
@@ -97,15 +186,22 @@ body {
   justify-content: center;
 }
 
+.button3 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .text6 {
+  height: 30px;
   opacity: 1;
   width: 770px;
-  background: white;
+  background: whitesmoke;
   border: rgb(0, 0, 0) 3px solid;
   border-radius: 20px;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin: 0 auto;
   margin-bottom: 20px;
   margin-top: 10px;
@@ -117,20 +213,123 @@ body {
   display: block;
   margin: 0 auto;
   margin-bottom: 10px;
-  border: black 5px solid;
+  border: black 3px solid;
   border-radius: 20px;
 }
 
 .image1 {
+  transition: 1s;
   background: rgb(0, 0, 0);
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 10px;
-  border: rgb(0, 0, 0) 5px solid;
+  border: rgb(0, 0, 0) 3px solid;
   border-radius: 30px;
 }
 
 .image2 {
+  transition: 1s;
+  background: rgb(0, 0, 0);
+  margin-bottom: 10px;
+  border: rgb(0, 0, 0) 3px solid;
+  border-radius: 30px;
+  background: rgb(0, 0, 0);
+}
+
+.image3 {
+  transition: 1s;
+  background: rgb(0, 0, 0);
+  margin-bottom: 10px;
+  border: rgb(0, 0, 0) 3px solid;
+  border-radius: 30px;
+  background: rgb(0, 0, 0);
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  margin-left: 10px;
+}
+
+.developer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.wikipedia {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.images {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.button {
+  opacity: 1;
+  margin: 0 auto;
+  background-color: whitesmoke;
+  border: black 3px solid;
+  color: Black;
+  border-radius: 15px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.heading:hover {
+  opacity: 0.75;
+}
+
+.image:hover {
+  transform: scale(1.2);
+}
+
+.text0:hover {
+  opacity: 0.75;
+}
+
+.text1:hover {
+  opacity: 0.75;
+}
+.text2:hover {
+  opacity: 0.75;
+}
+.text3:hover {
+  opacity: 0.75;
+}
+.text4:hover {
+  opacity: 0.75;
+}
+
+.text5:hover {
+  opacity: 0.75;
+}
+
+.text6:hover {
+  opacity: 0.75;
+}
+
+.image1:hover {
+  transform: scale(1.3);
+}
+
+.image2:hover {
+  transform: scale(1.3);
+}
+
+.image3:hover {
+  transform: scale(1.3);
+}
+
+.video:hover {
+  opacity: 0.75;
+}
+
+.button:hover {
+  opacity: 0.75;
+}
+
   background: rgb(0, 0, 0);
   margin-bottom: 10px;
   border: rgb(0, 0, 0) 5px solid;
